# Simple-Bank-System

./: README.md  pyproject.toml
bank/: __init__.py  __main__.py  database.py  models.py
bank/domain/: models.py
bank/infra/: account_repository.py  customer_repository.py  exceptions.py  transaction_repository.py
bank/infra/abstraction/: account_repository.py  customer_repository.py  transaction_repository.py
bank/usecase/: use_case.py
tests/: conftest.py  test_simple_scenario.py
