[tool.poetry]
name = "simple-bank-system"
version = "0.1.0"
description = ""
authors = ["cezarate <carlocezarate@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.4"
sqlmodel = "^0.0.19"
pydantic-settings = "^2.3.4"
email-validator = "^2.2.0"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
